--- a/project1.ipynb
+++ b/project1.ipynb
@@ -59,7 +59,7 @@
       "OK, version v1.12.5\n",
       "=====================================================================\n",
       "\n",
-      "Successfully logged in as jessicarodriguez@berkeley.edu\n"
+      "Successfully logged in as \n"
      ]
     }
    ],
