--- a/project1.ipynb
+++ b/project1.ipynb
@@ -3227,8 +3227,8 @@
      "text": [
       "Saving notebook... Saved 'project1.ipynb'.\n",
       "Submit... 100% complete\n",
-      "Submission successful for user: jessicarodriguez@berkeley.edu\n",
-      "URL: https://okpy.org/cal/data8/fa18/project1/submissions/YvXrW2\n",
+      "Submission successful for user: *redacted* \n",
+      "URL: *redacted* ",
       "\n"
      ]
     }
